--- a/2. Project_management.md
+++ b/2. Project_management.md
@@ -965,11 +965,148 @@ You may also want to account for cost of quality in your overall project budget.
 )
 
 
-Challenge 1: Budget pre-allocation
+#### Budgeting Challenges
+
+##### Challenge 1: Budget pre-allocation
 You may encounter situations where your budget is already set before you even start the project. This is known as budget pre-allocation. Some organizations follow strict budgeting cycles, which can lead to cost estimations taking place before the scope of the project is completely defined.  
 
 If you are given a pre-allocated budget, it is important to work with your customer to set expectations on scope and deliverables within the allocated budget. To deliver a great product within your allocated budget will require detailed planning.
 
 A pre-allocated budget should also be routinely monitored to ensure the amounts you have budgeted are sufficient to meet your costs. Be sure to carefully track all expenses in your budget. Regularly match these expenses against your pre-allocated budget to ensure you have sufficient funds for the remainder of your project.
 
-Part of that planning includes making sure that you are tracking fixed and time- and materials-based expenses. Fixed contracts are usually paid for when certain milestones are reached. Time and materials contracts are usually paid for monthly, based on the hours worked and other fees associated with the work, such as travel and meal expenses. 
+Part of that planning includes making sure that you are tracking fixed and time- and materials-based expenses. **Fixed contracts** are usually paid for when certain milestones are reached. **Time and materials contracts** are usually paid for monthly, based on the hours worked and other fees associated with the work, such as travel and meal expenses. 
+
+
+##### Challenge 2: Inaccurately calculating TCO
+Another budgeting pitfall you should try to avoid is underestimating the **total cost of ownership (TCO)** for project resources. TCO takes into account multiple elements that contribute to the cost of an item. It factors in the expenses associated with a product or service over its lifetime, rather than just upfront costs. 
+
+Let’s relate TCO to something more common, like owning a vehicle. Let’s say you buy a vehicle for a certain price, but then you also pay for things related to the vehicle, such as license fees, registration fees, and maintenance. If you add all of this up, you have your TCO for that vehicle. So now that you know what your TCO is, you may consider those fees before you buy your next vehicle. For example, you might opt for a vehicle with fewer maintenance requirements than one that requires more frequent service, since you know that will save you money overall. 
+
+The same concept applies to budgeting on a project. If you have a service requirement for a software technology that your team is using, for example, then it is important to budget for the costs of maintenance for that service. Additional types of costs you may need to account for when calculating TCO include warranties, supplies, required add-on costs, and upgrade costs.
+
+
+##### Challenge 3: Scope creep
+Scope creep is when changes, growth, and other factors affect the project’s scope at any point after the project begins. Scope creep causes additional work that wasn’t planned for, so scope creep can also impact your budget. 
+
+There are several factors that can lead to scope creep, such as: 
+
+- A vague Statement of Work (SoW)
+- Conversations and agreements about the project that aren’t officially documented
+- Unattainable timeframes and deadlines
+- Last-minute asks from priority stakeholders
+
+Addressing these factors as you plan your project can help prevent scope creep from impacting your budget.
+
+
+#### Budget Glossary 
+
+##### 1. Cash flow
+Cash flow is the inflow and outflow of cash on your project. As a project manager, this is important to understand because you need funding (cash into your project) to keep your project running. 
+
+Cash that comes into your project allows you to maintain and compensate resources and pay invoices for materials or outside services. In some cases, a project may start out with all of the cash it will receive until the end. If this is the case, it is important to monitor your outflow to ensure that you have enough funding to complete the project.
+
+Monitoring cash flow allows you to have a reference point for your project’s health. For example, if the cash flow coming into your project is lower than your outflow, you will need to adjust your budget. Planning and tracking the cash flow for your project is a key component of budget management.
+
+##### 2. CAPEX and OPEX
+
+Organizations have a number of different types of expenses, from the wages they pay their employees to the cost of materials for their products. These expenses can be organized into different categories. Two of the most common are CAPEX (capital expenses) and OPEX (operating expenses).
+
+- **CAPEX (capital expenses)** are an organization's major, long-term, upfront expenses, such as buildings, equipment, and vehicles. They are generally for assets that the company will own and keep. The company incurs these expenses because they believe they will create a benefit for the company in the future. 
+
+- **OPEX (operating expenses)** are the short-term expenses that are required for the day-to-day tasks involved in running the company, such as wages, rent, and utilities. They are often recurring.  
+
+You may need to account for both OPEX and CAPEX on your projects. For example, a major software acquisition as part of an IT project could be treated by your organization as a capital expense. The monthly wages paid to a contractor to help deploy the software would be an operating expense. It’s a good idea to talk to your finance or accounting department when you start working on your project budget to see how they determine the difference between OPEX and CAPEX. This will guide you in properly allocating capital and operating expenses for your projects.
+
+
+##### 2. Contingency reserves
+Sometimes, a project hits a snag and incurs additional expenses. One way to prepare for unplanned costs is by using contingency reserves. Contingency reserves are funds added to the estimated project cost to cover identified risks. These are also referred to as buffers.
+
+To determine the amount of your contingency reserves, you will need to go through the risk management process and identify the risks that are most likely to occur. We will go into more detail on risk management later in the course, but it is important to understand that risks to your project can have an impact on your budget.
+
+Contingency reserves can also be used to cover areas where actual costs turn out to be higher than estimated costs. For example, you may estimate a certain amount for labor costs, but if a contracted worker on your team gets a raise, then the actual costs will be higher than you estimated. 
+
+##### 3. Management reserves
+While contingency reserves are used to cover the costs of identified risks, management reserves are used to cover the costs of unidentified risks. For example, if you were managing a construction project and a meteor hit your machinery, you could use management reserves to cover the costs of the damage. 
+
+Contingency reserves are an estimated amount, whereas management reserves are generally a percentage of the total cost of the project. To determine a project’s management reserves, you can estimate a percentage of the budget to set aside. This estimate is typically between 5–10%, but the amount is based on the complexity of the project. A project with a more complex scope may require higher management reserves. Note that the project manager will generally need approval from the project sponsor in order to use management reserves.
+
+## 2.8 Procurement 
+
+### Tips for the procurement process
+As you have learned, procurement means obtaining all of the materials, services, and supplies required to complete the project. You have just learned about the procurement process in project management. To recap, there are five steps in the typical procurement process:
+
+- **Initiating:** planning what you need to meet your project goals
+- **Selecting:** deciding which suppliers and vendors to use
+- **Contract writing:** developing, reviewing, and signing contracts
+- **Controlling:** making payments and maintaining and ensuring quality
+- **Completing:** measuring your success
+
+#### Tips for initiating 
+While planning your project, figure out which materials, resources, and supplies you will need to get the job done. During this step, you will decide which items will be internally procured and which items will be externally outsourced. Once you’ve decided which items you need to outsource, compare each of those items specifications, components, quality measurements, standards, and characteristics with your project’s requirements. You may find that some of the items have features you don’t need. If you can identify those unnecessary features, you will know exactly what you want and don’t want in an item, possibly reducing your total cost. 
+
+#### Tips for selecting 
+Now that you have outlined what you need for your project, you need to determine vendors to source these items. Research and assess various vendors and suppliers, and try to find out if your preferred vendors have a reputation for delivering quality work on time. After you’ve identified your preferred vendors and suppliers, interview them to learn more about their products and services. If possible, make site visits to see exactly how each vendor runs their business in person. 
+
+#### Tips for contract writing
+Contract writing requires excellent attention to detail, so pay close attention to the inclusions and exclusions in the vendor’s offer. There may be some items included in the vendor’s price that you can provide in-house at low or no additional cost. For example, the vendor’s offer may include charges for storing materials, using certain equipment, or labor. These are all things that you may be able to provide from your organization’s resources, so you can opt to save costs with the vendor on those items by using in-house materials and resources. 
+
+Sometimes, the vendor may write the contract. In this case, checking carefully for clarity and accuracy ensures that you know exactly what you are getting from the vendor. Whether the contract is written by you or by the vendor, you will almost always want to consult with a legal and compliance team to ensure that everything in the contract is ethical and legal.
+
+
+#### Tips for controlling
+
+The procurement process isn’t over when the contracts are signed. The next step is to ensure that the work is being done according to the terms of the contract. You will need to periodically review the performance and quality of each vendor. When communicating with vendors, remain professional but firm to ensure that all project requirements are being fulfilled and that all major milestones are being met on time and at cost. 
+
+Building and maintaining a good relationship with your vendors benefits the team and the overall project. This relationship will make it easier to make adjustments and contract revisions if the need arises. Taking certain measures, like conducting regular check-in meetings, will ensure that the work is being completed according to plan. 
+
+#### Tips for completing
+In the completing step of the procurement process, you will measure the success of your procurements. Ask yourself:
+
+- Were the materials created good quality? 
+- Were there any issues with labor contracts? 
+- How were your relationships with vendors? 
+
+During this step, it is also important to document any lessons learned. It is likely that you will be involved in another project similar to this one in the future. Take notes about how the procurement process went so you can use this information on a future project. 
+
+
+### Avoiding ethical traps in procurement
+
+
+Now that you have learned about the importance of ethics when conducting procurements, let’s talk about some potential ethical traps you might face and how to navigate them. 
+
+#### Understanding ethical traps 
+An ethical trap is an ethical dilemma that causes us to make a certain decision without regard for our ethical principles. You may face ethical traps throughout the course of a project. However, ethics can be of particular concern when it comes to procurement. As you have learned, project managers must take precautions to ensure that they and their suppliers are following ethical principles during the procurement process. 
+
+#### Common ethical traps
+Sometimes, potential ethical issues can be overlooked or can be considered the necessary cost of doing business. This is a dangerous line of thinking since these types of assumptions can put your project, company, and career at risk. To review what we discussed in the video, a few of the most common ethical traps that exist when conducting procurements are corruption and bribery, sole-supplier sourcing, and interactions with state-owned agencies.
+
+##### 1. Corruption and bribery   
+You may be confronted with different types of corruption when going through the procurement process. One form of corruption is when a vendor seeks to reduce the competition for a contract during the bidding process. A company may attempt to bribe members within the organization to sway their decision into a favorable outcome for the vendor. Bribes may include things like money, gifts, tickets to events, and more. Another type of corruption scheme is to offer a certain percentage of an awarded contract—also known as a kickback—to an official who can ensure that their company wins the bid.
+
+##### 2. Sole-supplier sourcing   
+In some situations, having a vendor who a company is already familiar with smooths the procurement process and works well for both parties. Ethical issues arise when other vendors aren’t even allowed to bid for contracts for which they are similarly qualified. With sole-supplier sourcing, vendors may reach out to buyers before a bid is even requested. When the buyer’s organization decides to work with that vendor based on their previously-established relationship, that limits competition before the bidding has even begun. When this happens, companies and the public miss out on the advantages of competition, such as reasonable pricing, product quality standards, or speedy delivery options. 
+
+#### 3. Interactions with state-owned entities
+There are some instances in which government agencies require an organization to adhere to stricter ethical standards than they might have otherwise. Governmental agencies such as the Food and Drug Administration and The Occupational Safety and Health Administration, for example, keep businesses within legal and ethical standards. If you are unfamiliar with any governmental restrictions that may affect your industry, organization, or project, you could unintentionally fall into an ethical trap.
+
+
+### Avoiding ethical traps   
+Here are some guidelines that will help you avoid falling into ethical traps when it comes to procurement:
+
+Understand the legal requirements for your procurements. 
+Every country has regulations to adhere to when conducting business in that country. Be sure to research the legal and ethical requirements based on your project and procurement needs, and if your organization has a legal team, make sure to lean on them for support and advice.
+
+#### Stick to your ethical codes. 
+Honesty, responsibility, respect, and fairness are the values that underpin ethical behavior in the project management profession. The Project Management Institute’s (PMI) 
+code of ethics
+ provides detailed guidelines to help ensure you maintain [ethical conduct](https://www.pmi.org/about/ethics/code) in your projects. 
+
+Test your ethics. 
+When you face an ethical dilemma, ask yourself questions in each of the following categories:
+- Shame: Would you be ashamed if someone knew what you did?
+- Community: Would you want your friends to know the decision you made? 
+- Legal: Would you face legal action if you took this action? 
+- Situation: Would your actions be justified in this situation?
+- Consequence: Would a negative outcome be worth your actions? 
+
+asd
