--- a/2. Project_management.md
+++ b/2. Project_management.md
@@ -1101,7 +1101,7 @@ Honesty, responsibility, respect, and fairness are the values that underpin ethi
 code of ethics
  provides detailed guidelines to help ensure you maintain [ethical conduct](https://www.pmi.org/about/ethics/code) in your projects. 
 
-Test your ethics. 
+#### Test your ethics. 
 When you face an ethical dilemma, ask yourself questions in each of the following categories:
 - Shame: Would you be ashamed if someone knew what you did?
 - Community: Would you want your friends to know the decision you made? 
@@ -1109,4 +1109,17 @@ When you face an ethical dilemma, ask yourself questions in each of the followin
 - Situation: Would your actions be justified in this situation?
 - Consequence: Would a negative outcome be worth your actions? 
 
-asd
+## 2.9 Risk Management
+### Phases of Risk Management
+
+Risk management is the process of identifying and evaluating potential risks and issues that could impact your project. Risk management is an ongoing practice throughout the life cycle of your project. It typically involves some variation of these five steps:
+
+1. Identify the risk. The first phase of the risk management process is to identify and define potential project risks with your team. After all, you can only manage risks if you know what they are. 
+
+2. Analyze the risk. After identifying the risks, determine their likelihood and potential impact to your project. Serious risks with a high probability of occurring pose the greatest threat.
+
+3. Evaluate the risk. Next, use the results of your risk analysis to determine which risks to prioritize.
+
+4. Treat the risk. During this phase, make a plan for how to treat and manage each risk. You might choose to ignore minor risks, but serious risks need detailed mitigation plans.
+
+5. Monitor and control the risk. Finally, assign team members to monitor, track, and mitigate risks if the need arises.
