--- a/2. Project_management.md
+++ b/2. Project_management.md
@@ -1123,3 +1123,17 @@ Risk management is the process of identifying and evaluating potential risks and
 4. Treat the risk. During this phase, make a plan for how to treat and manage each risk. You might choose to ignore minor risks, but serious risks need detailed mitigation plans.
 
 5. Monitor and control the risk. Finally, assign team members to monitor, track, and mitigate risks if the need arises.
+
+
+###  Uncover opportunities using risk management
+
+When you think about risks, it is likely that you automatically think of potential negative events. But when identifying risks, it is important to also consider the good things that could happen, which are considered opportunities. An opportunity is a potential positive outcome of a risk. It is important to recognize opportunities and to capitalize on them as they appear so you can reach your project goals faster, more cheaply, or with less effort. Some examples of opportunities include:
+- Completing a milestone ahead of schedule
+- Discounted materials 
+- Availability of additional resources (people, investments, equipment) 
+
+**An opportunity is a potential positive outcome that may bring additional value to a project.** You can use the same tools and techniques that you use in risk management—identify, analyze, evaluate, treat, and control—to add potential opportunities to your risk management plan. You need to know what to do if things go wrong, but you should also make plans to seize opportunities. By using techniques such as brainstorming and drawing on project history or prior experience, you can identify potential opportunities and outline how you will take advantage of them if they occur.
+
+As a project manager, you should always be on the lookout for potential opportunities when developing your risk management plan. Review the following article for further information on using risk management strategies to identify and take advantage of opportunities that may occur during your projects: 
+
+More details on how to manage risks [here](https://www.projectmanager.com/blog/risk-management-process-steps)
