feat: fishbone update

--- a/2. Project_management.md
+++ b/2. Project_management.md
@@ -1125,7 +1125,7 @@ Risk management is the process of identifying and evaluating potential risks and
 5. Monitor and control the risk. Finally, assign team members to monitor, track, and mitigate risks if the need arises.
 
 
-###  Uncover opportunities using risk management
+### Uncover opportunities using risk management
 
 When you think about risks, it is likely that you automatically think of potential negative events. But when identifying risks, it is important to also consider the good things that could happen, which are considered opportunities. An opportunity is a potential positive outcome of a risk. It is important to recognize opportunities and to capitalize on them as they appear so you can reach your project goals faster, more cheaply, or with less effort. Some examples of opportunities include:
 - Completing a milestone ahead of schedule
@@ -1137,3 +1137,61 @@ When you think about risks, it is likely that you automatically think of potenti
 As a project manager, you should always be on the lookout for potential opportunities when developing your risk management plan. Review the following article for further information on using risk management strategies to identify and take advantage of opportunities that may occur during your projects: 
 
 More details on how to manage risks [here](https://www.projectmanager.com/blog/risk-management-process-steps)
+
+### Tools to help identify risks
+#### Fishbone diagram
+
+Fishbone diagrams help the team to brainstorm potential causes of a problem or risk and sort them into useful categories. These categories show the areas that you should focus on to mitigate that risk. Fishbone diagrams are also very helpful in finding the root cause of a problem. A root cause is the initial cause of a situation that introduces a problem or risk. The purpose of using fishbone diagrams in risk management is to identify the root cause of a potential problem for a project or program.  
+
+
+
+##### Step 1) Define the problem 
+First, Miguel clearly defines what the problem entails. In this case, Miguel states the problem as “trouble delivering products to downtown office buildings on time.” Then he adds the problem to the head of his fishbone diagram. 
+
+Image of a blank fishbone diagram with only the problem filled out "trouble delivering products to downtown offices"
+
+![alt text](image-19.png)
+
+##### Step 2) Identify the categories 
+In this step, Miguel thinks of the types of categories that could be causing the problem. These categories will change depending on the type of problem or industry. Some common examples of categories include “people,” “technology,” “materials,” “transportation,” “money,” “time,” “environment,” and “procedures.” 
+
+For the delivery problem at Office Supply Inc., Miguel lists the categories “people,” “technology,” “materials,” “transportation,” and “environment” at the top and bottom of the lists to the left of the problem in his fishbone diagram. 
+
+Fishbone diagram with the categories and problem filled out listed in the readingFishbone diagram with the categories and problem filled out listed in the reading. Categories include “people,” “technology,” “materials,” “transportation,” “money,” “time,” “environment,” and “procedures.”
+
+![alt text](image-20.png)
+
+##### Step 3) Brainstorm the causes 
+Now that Miguel has identified possible categories that relate to the risk, he brainstorms areas of concern within each category. He reaches out to his team for help in identifying these possible causes. Then, Miguel fills in the lists with some of the causes that could be related to each category.
+
+**Pro tip:** Brainstorming should be a judgment-free zone. Encourage the flow of information related to the categories and try not to rule things out. When dealing with human factors, steer clear of naming individuals; instead, focus solely on behaviors.
+
+Fishbone diagram with the categories, possible causes, and problem filled out listed in the readingFishbone diagram with the categories, possible causes, and problem filled out listed in the reading. New causes for "people" include lack of training, distractions, lack of people. For "technology" include overcomplicated and outdated. For "materials" include fragile packaging and lack of forklifts. For "transportation" includes trucks too small, trucks too big, and lack of trucks. For "environment" includes city traffic, busy elevators, and long distances.
+
+![alt text](image-21.png)
+
+##### Step 4) Analyze the causes
+Now that Miguel has discovered several possible causes for the delivery problems to downtown offices, he analyzes those causes. He needs to identify the root cause of the existing problem so he can figure out how to mitigate it for the current project.
+
+Note that one cause of a problem isn’t necessarily the root cause. For example, Miguel has identified that a lack of forklifts is a problem. Having more forklifts would allow the company to get the products on and off of the trucks more quickly. However, after calculating the amount of time it takes to unload and load the products, Miguel realizes that adding more forklifts won’t significantly reduce the amount of time to get the products from the warehouse to downtown offices. Therefore, this is one cause of the problem, but it is not the root cause.
+
+On the other hand, Miguel has noticed that there is no set schedule for sending out deliveries. Since the problem only exists in the city instead of in the suburban areas, he realizes that traffic must also be playing a role in the late deliveries. Therefore, changing the schedule so that the delivery times are before the city’s rush hour may help fix the problem.        
+
+Fishbone diagram with the categories, possible causes, and problem filled out but causes are all struck out
+
+![alt text](image-22.png)
+
+Pro tip: Fishbone diagrams are tools that can be useful during any phase of the project. When you use them in risk planning, you are trying to identify the possible causes of a problem that may or may not occur. When you use them in the execution phase, you are trying to find the root cause of an issue that has already occurred. 
+
+**Key takeaway**
+Identifying risks and measuring their potential impact on a project can be a complex task. You can help visualize these issues by creating fishbone diagrams. To recap, the steps to create a fishbone diagram are:
+
+- Define the problem
+- Identify the categories
+- Brainstorm the causes
+- Analyze the causes
+
+Once you’ve developed a fishbone diagram to help find a problem’s root cause and measure its potential impact on the project, you can then move on to determining how to mitigate the risk. 
+
+
+
