feat: include communication plan

--- a/2. Project_management.md
+++ b/2. Project_management.md
@@ -34,7 +34,7 @@ Build out the schedule so you can properly manage the resources, budget, materia
 In this phase, put all of your hard work from the first two phases into action. 
 - Monitor your project team as they complete project tasks. 
 - Break down any barriers that would slow or stop the team from completing tasks. 
-- Help keep the team aware of schedule and deliverable expectations.
+- Help keep the team aware of schedule and deliverable expectations
 - Address weaknesses in your process or examine places where your team may need additional training to meet the project’s goals.
 - Adapt to changes in the project as they arise.
 
@@ -1226,3 +1226,8 @@ If you have strategies you can rely on for avoiding, minimizing, transferring, a
 
 
 
+
+##### Creating an effective communication plan
+#####  Tips for effective communication
+
+##### 
