--- a/2. Project_management.md
+++ b/2. Project_management.md
@@ -1225,9 +1225,63 @@ Lastly, you can accept the risk as the normal cost of doing business. Active acc
 If you have strategies you can rely on for avoiding, minimizing, transferring, and accepting project risks—including single point of failure risks—you will be in a better position to protect your project from the possible impact of these risks.                               
 
 
+##### Visualizing dependency relationships 
 
+Dependencies are a relationship between two project tasks in which the completion or the initiation of one is reliant on the completion or initiation of the other. Let’s explore four common types of dependencies:
+
+**Finish to Start (FS)**
+In this type of relationship between two tasks, Task A must be completed before Task B can start. This is the most common dependency in project management. It follows the natural progression from one task to another.
+
+![alt text](image-24.png)
+
+**Example**: Imagine you are getting ready to have some friends over for dinner. You can’t start putting on your shoes (Task B) until you’ve finished putting on your socks (Task A). 
+
+Task A: **Finish** putting on your socks. →Task B: **Start** putting on your shoes.
+
+
+**Finish to Finish (FF)**
+In this model, Task A must finish before Task B can finish. (This type of dependency is not common.)
+
+![alt text](image-25.png)
+
+**Example:** Earlier in the day, you baked a cake. You can’t finish decorating the cake (Task B) until you finish making the icing (Task A).
+
+Task A: Finish making the icing. →Task B: Finish decorating the cake.
+
+**Start to Start (SS)**
+In this model, Task B can’t begin until Task A begins. This means Tasks A and B start at the same time and run in parallel.
 
 ##### Creating an effective communication plan
 #####  Tips for effective communication
+
+![alt text](image-26.png)
+
+Example:  You need to take the train home after work. You can’t get on the train (Task B) until you pay for the train ride (Task A).  
+
+Task A: Start by paying for your train ride. →Task B: Start going home by boarding the train.
+
+
+**Start to Finish (SF)**
+In this model, Task A must begin before Task B can be completed. 
+
+![alt text](image-27.png)
+
+**Example:** One of your friends calls to tell you he’ll be late. He can’t finish his shift (Task B) and leave work until his coworker arrives to start her shift (Task A). 
+
+Task A: Your friend’s coworker starts her shift. →Task B: Your friend finishes his shift.
+
+**Dependency graphs**
+As a project manager, you will use these dependencies to visually represent the flow of work during your project. Let’s examine how to use a dependency graph with an everyday example.
+
+Imagine you are making peanut butter and jelly sandwiches for the kids who will be coming to your dinner, and you want to use dependency relationships to map your activities on a graph.  
+
+
+![alt text](image-28.png)
+
+![alt text](image-29.png)
+
+##### 
+
+
 
 ##### 
