feat: effective comms

--- a/2. Project_management.md
+++ b/2. Project_management.md
@@ -1251,8 +1251,6 @@ Task A: Finish making the icing. →Task B: Finish decorating the cake.
 **Start to Start (SS)**
 In this model, Task B can’t begin until Task A begins. This means Tasks A and B start at the same time and run in parallel.
 
-##### Creating an effective communication plan
-#####  Tips for effective communication
 
 ![alt text](image-26.png)
 
@@ -1280,8 +1278,26 @@ Imagine you are making peanut butter and jelly sandwiches for the kids who will 
 
 ![alt text](image-29.png)
 
-##### 
+## 2.10 Creating an effective communication plan
 
+A good project manager must be effective in communicating with all stakeholders and team members through various mediums.
+
+As the project manager, it is important to develop a communication plan for the duration of your project. Good communication helps your project run smoothly, leads to better outcomes, and supports a healthy team culture. You can use these four tips to foster effective communication within your team: 
+
+### Tips for effective communication
+
+
+![alt text](image-30.png)
+
+#### Recognize and understand individual differences
+You can encourage open, inclusive communication by:
+
+- Not making assumptions about your audience’s backgrounds, identities, or experiences. 
+- Being mindful of your own biases.
+- Using appropriate, professional, and neutral language.
+- Including, respecting, and being curious about diverse points of view.
+
+As the project manager, you will undoubtedly work with a diverse group of team members and stakeholders on each project. You will need to understand each team member’s background, experiences, perspectives, and biases—as well as your own—to  communicate effectively. 
 
 
 ##### 
