--- a/2. Project_management.md
+++ b/2. Project_management.md
@@ -1299,5 +1299,32 @@ You can encourage open, inclusive communication by:
 
 As the project manager, you will undoubtedly work with a diverse group of team members and stakeholders on each project. You will need to understand each team member’s background, experiences, perspectives, and biases—as well as your own—to  communicate effectively. 
 
+-----------------------
+# Jira
 
-##### 
+
+## Agile or Waterfall?
+
+![alt text](image-31.png)
+
+## Scrum board
+The scrum framework enables software teams to manage complex projects by creating a culture of collaboration. The Jira scrum board is the tool that unites teams around a single goal and promotes iterative, incremental delivery.
+
+![alt text](image-32.png)
+
+## Kanban board
+
+Kanban is a common framework for agile and DevOps software development that provides transparency of work and team capacity. Kanban boards in Jira help teams visualize their workflow, limit work-in-progress, and maximize efficiency.
+
+![alt text](image-33.png)
+
+Don't ask, "kanban vs scrum." Instead, ask "kanban or scrum" or even "kanban and scrum." Make it more about the principles than the practices.
+
+So, where were we?
+
+**Agile** is a structured and iterative approach to project management and product development. It recognizes the volatility of product development, and provides a methodology for self-organizing teams to respond to change without going off the rails. Today, agile is hardly a competitive advantage. No one has the luxury to develop a product for years or even months in a black box. This means it’s more important than ever to get it right.
+
+**Kanban** is all about visualizing your work, limiting work in progress, and maximizing efficiency (or flow). Kanban teams focus on reducing the time a project takes (or user story) from start to finish. They do this by using a kanban board and continuously improving their flow of work. 
+
+**Scrum** teams commit to completing an increment of work, which is potentially shippable, through set intervals called sprints. Their goal is to create learning loops to quickly gather and integrate customer feedback. Scrum teams adopt specific roles, create special artifacts, and hold regular ceremonies to keep things moving forward. Scrum is best defined in The Scrum Guide.
+#### 
